--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,10 +67,32 @@ h1, h2 {
     animation-fill-mode: forwards;
 }
 
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
+}
+
 #hero-outer {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: absolute;
 }
 
 /* creates the level of zoom for hero image */
